# ChangeLog for sys-libs/readline
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/readline/ChangeLog,v 1.100 2007/07/30 10:53:45 corsair Exp $

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> readline-5.2_p4.ebuild:
  Stable on ppc64; bug #186286

  25 Jul 2007; Jeroen Roovers <jer@gentoo.org> readline-5.2_p4.ebuild:
  Stable for HPPA (bug #186286).

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> readline-5.2_p4.ebuild:
  amd64 stable, bug 186286

  23 Jul 2007; Raúl Porcel <armin76@gentoo.org> readline-5.2_p4.ebuild:
  alpha stable wrt #186286

  23 Jul 2007; nixnut <nixnut@gentoo.org> readline-5.2_p4.ebuild:
  Stable on ppc wrt bug 186286

  23 Jul 2007; Joshua Kinard <kumba@gentoo.org> readline-5.2_p4.ebuild:
  Stable on mips, per #186286.

  23 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  readline-5.2_p4.ebuild:
  Stable on sparc wrt #186286

  30 Jun 2007; Raúl Porcel <armin76@gentoo.org> readline-5.2_p4.ebuild:
  ia64/x86 stable

  12 May 2007; Joshua Kinard <kumba@gentoo.org> readline-5.2_p2.ebuild:
  Stable on mips.

*readline-5.2_p4 (02 May 2007)

  02 May 2007; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p4.ebuild:
  Version bump.

  24 Apr 2007; Raúl Porcel <armin76@gentoo.org> readline-5.2_p2.ebuild:
  ia64 + x86 stable

*readline-5.2_p2 (22 Mar 2007)

  22 Mar 2007; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p2.ebuild:
  Version bump.

  13 Jan 2007; Mike Frysinger <vapier@gentoo.org> readline-4.3-r5.ebuild,
  readline-5.0-r2.ebuild, readline-5.1_p4.ebuild, readline-5.2.ebuild,
  readline-5.2_p1.ebuild:
  Switch to using preserve_old_lib().

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> readline-4.3-r5.ebuild:
  Remove gnuconfig usage.

*readline-5.2_p1 (16 Dec 2006)

  16 Dec 2006; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p1.ebuild:
  Version bump.
