@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX bash-3.0-etc-inputrc.patch 1443 RMD160 8bf34837bef20bfc7062e32e4a23aa6af9ef2b49 SHA1 a58b9011f61e7e60be0fcd8741d91292222eff61 SHA256 b43736c32ed9d9088ee1cbbff11b78d6f6993492f9da3e1eb5151a64a082d025
 MD5 d687545889dacb43e121f4932d99a534 files/bash-3.0-etc-inputrc.patch 1443
 RMD160 8bf34837bef20bfc7062e32e4a23aa6af9ef2b49 files/bash-3.0-etc-inputrc.patch 1443
@@ -72,6 +75,9 @@ DIST readline52-001 874 RMD160 0cedb82ccc4709e6b39e6cb95143131259b0e7c5 SHA1 8de
 DIST readline52-002 1433 RMD160 c9bbff4b1ba2ff77e5a43ad98a94f4753e5f0aa3 SHA1 db5baf0129357ba9397dfcd24e9f6db0abdcbc7a SHA256 9deacaef25507a0c2ae0b661bf9342559b59a2954d66ea3c5f5bcd900fdfcf78
 DIST readline52-003 1204 RMD160 4007b1dcd19d204f6ce75fe5a60a5c780f221a12 SHA1 7a879ce1ccb10ad65c34d3eeced9f4b79ac68434 SHA256 2a55d2ecb1c9b0147aeb193a6323616ab31c1c525a83b2db3a994b15594ba934
 DIST readline52-004 2192 RMD160 7c8ef28a2d4fb6054aa84e0abfbdff0d446c0c90 SHA1 00f91e9784e2c74415bccff8cad4604424c4d470 SHA256 a03b65633781efa7c3aae5d57162985e7b7a3c10acf0f2621be610e16f27e5f2
+DIST readline52-005 8029 RMD160 9a588f4ad425cff31ba78cef7083c53e8b3b8693 SHA1 ba68f91097cbf8ccb162340c92131922458faefc SHA256 06001896514148a757ea6edbbd40c4fc4331dc653847244386c37b138b150f64
+DIST readline52-006 2820 RMD160 56649a55aeac4141992143fe2d11363ef6f45ee2 SHA1 0c55402c4fbc8d932dd90cad42925182d02ecc26 SHA256 dfef3e982c0adf8bb5a9b7d0468ec8f5f18138b325e28759437464de5be71013
+DIST readline52-007 1523 RMD160 31eaeca99f33b04816eb103c66915518da4b240a SHA1 30dba802dc07e6f2e75cb300e920affa6863933d SHA256 775b028c7b761397ac6ae1bdfbac7e896dc3b9b3adc2f91312499180ca13bdd1
 EBUILD readline-4.3-r5.ebuild 2425 RMD160 649a6c1e778d46395747bca2f2cf8e6a52e56db9 SHA1 ea411c19af7083351934c79e0fd09b0e1641d6ed SHA256 cbaa0be05784e163e907fd093e65057422d7b25c5234035b007407935e93269f
 MD5 9cb825cba9f06c7a3bfbec6dea7e5da4 readline-4.3-r5.ebuild 2425
 RMD160 649a6c1e778d46395747bca2f2cf8e6a52e56db9 readline-4.3-r5.ebuild 2425
@@ -84,18 +90,18 @@ EBUILD readline-5.1_p4.ebuild 2801 RMD160 aeaf87696c8e457ab870062dd51289d016884f
 MD5 fae444bcd5a2a36d82e5f75586f6c27b readline-5.1_p4.ebuild 2801
 RMD160 aeaf87696c8e457ab870062dd51289d016884f8a readline-5.1_p4.ebuild 2801
 SHA256 d77ccfa3fcb3ecf746ddbb4220f89f4c82b1c63c8a2a4643f3b2ebfc50572b4c readline-5.1_p4.ebuild 2801
-EBUILD readline-5.2_p2.ebuild 2710 RMD160 71bcffae88b6f9980bf759d966230c3a9140b0cf SHA1 baac7b9ffd322f2de3dc4ecfd61ab272af0d022a SHA256 6e09605ae62fe5555689d22c21e18fc3c8ec4b958d34f7eda1e88354fc273dc6
-MD5 5fc2f0b81c2cd190ea409976426d11a4 readline-5.2_p2.ebuild 2710
-RMD160 71bcffae88b6f9980bf759d966230c3a9140b0cf readline-5.2_p2.ebuild 2710
-SHA256 6e09605ae62fe5555689d22c21e18fc3c8ec4b958d34f7eda1e88354fc273dc6 readline-5.2_p2.ebuild 2710
 EBUILD readline-5.2_p4.ebuild 2707 RMD160 6e8f5a4a19f77c7c6824b1570dd7328e32f4e8e7 SHA1 ce60733517827bb8939970cbabffce5f1c986f05 SHA256 fc89ac045e21b6dee3609c201dbac2bd3ccd8d696a98771b40322428a94872f1
 MD5 f6eaaa88ee26cc3f7c55a4aeab81bc5d readline-5.2_p4.ebuild 2707
 RMD160 6e8f5a4a19f77c7c6824b1570dd7328e32f4e8e7 readline-5.2_p4.ebuild 2707
 SHA256 fc89ac045e21b6dee3609c201dbac2bd3ccd8d696a98771b40322428a94872f1 readline-5.2_p4.ebuild 2707
-MISC ChangeLog 12966 RMD160 60022ea105ea2ed490b3ff4bb5d088d61e4d596f SHA1 90a511286151eaa928869f32c62fbfb57371da15 SHA256 574fd32400a6ddc71a3df201c665fc68f60eb4e63ab3ee3487d83945d880301b
-MD5 876cddbc2a397c701a8d5e2162092237 ChangeLog 12966
-RMD160 60022ea105ea2ed490b3ff4bb5d088d61e4d596f ChangeLog 12966
-SHA256 574fd32400a6ddc71a3df201c665fc68f60eb4e63ab3ee3487d83945d880301b ChangeLog 12966
+EBUILD readline-5.2_p7.ebuild 2718 RMD160 1d14af0c1ec7bf95009f92242c983016c7b18285 SHA1 06fd7f7b16b1bb318c05ff840c34e3c4d7531913 SHA256 25be44f03c86a564419610298ba8771a3d45da60f020b5338075c7c02ccc373f
+MD5 5bd0c9391443f573ff84962de0b984ab readline-5.2_p7.ebuild 2718
+RMD160 1d14af0c1ec7bf95009f92242c983016c7b18285 readline-5.2_p7.ebuild 2718
+SHA256 25be44f03c86a564419610298ba8771a3d45da60f020b5338075c7c02ccc373f readline-5.2_p7.ebuild 2718
+MISC ChangeLog 13089 RMD160 a5456e9c9f146f9c37ad5fccff6fa6501c8c9ad8 SHA1 eaba3f99f50ad9fe512e2b0f0ad07140201aff7a SHA256 0311a7cf14172bb6a1e5fc96b6cc5d4119c63a93fee32a6360ccb612f36d6c47
+MD5 8842b2b17abc6a89fbb6c4cf5449709d ChangeLog 13089
+RMD160 a5456e9c9f146f9c37ad5fccff6fa6501c8c9ad8 ChangeLog 13089
+SHA256 0311a7cf14172bb6a1e5fc96b6cc5d4119c63a93fee32a6360ccb612f36d6c47 ChangeLog 13089
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -109,9 +115,16 @@ SHA256 e128619affbcad7ed89ba33873b79f9930cd14f6bf66b4574099e132a5f9f4e1 files/di
 MD5 cda18a0530ca1ea373731ab0dcb3ff26 files/digest-readline-5.1_p4 1106
 RMD160 9cec95c8cbb1b49704bde6f584f5c2a1b586d1f8 files/digest-readline-5.1_p4 1106
 SHA256 aae06807afa77c78b9d2e7e6c2de279d5d56fb2cbbce09a5694853f6078edc6c files/digest-readline-5.1_p4 1106
-MD5 8e6bbeb2bfaad8219efcf26916179b41 files/digest-readline-5.2_p2 672
-RMD160 241a25444a19607b7ce49468da6e390b80011d6e files/digest-readline-5.2_p2 672
-SHA256 defebbf9ee76b13efab92b8ccafd517ad04dd007594594c4eefdbc1abae15e7e files/digest-readline-5.2_p2 672
 MD5 61fc2c20838b7b14af0f58bb0969491b files/digest-readline-5.2_p4 1106
 RMD160 1a578cd8b1af0a20dcc1302d4726d24b5c044fe4 files/digest-readline-5.2_p4 1106
 SHA256 bead2e4967c1694d7e11a7cf159885a75276363eb4df3ac95d6cadf05545ff3f files/digest-readline-5.2_p4 1106
+MD5 39d6c5df4dbb4c1703617696547e65a1 files/digest-readline-5.2_p7 1757
+RMD160 ce4df8ae24a7f1ce12d5af1ed3be4996bef929ec files/digest-readline-5.2_p7 1757
+SHA256 048434d1a1a712f0c5325bf7648d1b618f5ecd41d3b5ccba4bf376c46fe3f685 files/digest-readline-5.2_p7 1757
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.5 (GNU/Linux)
+
+iD8DBQFGz0f1p/wUKkr7RBoRArfxAJ0akrf89Ce2l/r4hTuMpxWyxu2AwACgob9Z
+zxEVsg91Wv60jMmJMQ5zN+s=
+=9DMX
+-----END PGP SIGNATURE-----
