@@ -1,0 +1,24 @@
+MD5 e39331f32ad14009b9ff49cc10c5e751 readline-5.2.tar.gz 2037705
+RMD160 983cbb25192e0a376b80cb2428fe8ee254a041c7 readline-5.2.tar.gz 2037705
+SHA256 12e88d96aee2cd1192500356f0535540db499282ca7f76339fb4228c31249f45 readline-5.2.tar.gz 2037705
+MD5 9d4d41622aa9b230c57f68548ce87d8f readline52-001 874
+RMD160 0cedb82ccc4709e6b39e6cb95143131259b0e7c5 readline52-001 874
+SHA256 eac304c369154059f93049ada328739faaf40338d3cb1fb4b544c93d5ce3f8d5 readline52-001 874
+MD5 f03e512d14206e37f7d6a748b56b9476 readline52-002 1433
+RMD160 c9bbff4b1ba2ff77e5a43ad98a94f4753e5f0aa3 readline52-002 1433
+SHA256 9deacaef25507a0c2ae0b661bf9342559b59a2954d66ea3c5f5bcd900fdfcf78 readline52-002 1433
+MD5 252b42d8750f1a94b6bdf086612dceb2 readline52-003 1204
+RMD160 4007b1dcd19d204f6ce75fe5a60a5c780f221a12 readline52-003 1204
+SHA256 2a55d2ecb1c9b0147aeb193a6323616ab31c1c525a83b2db3a994b15594ba934 readline52-003 1204
+MD5 a32333c2e603a3ed250514e91050e552 readline52-004 2192
+RMD160 7c8ef28a2d4fb6054aa84e0abfbdff0d446c0c90 readline52-004 2192
+SHA256 a03b65633781efa7c3aae5d57162985e7b7a3c10acf0f2621be610e16f27e5f2 readline52-004 2192
+MD5 8106796c09b789523a3a78ab69c04b6d readline52-005 8029
+RMD160 9a588f4ad425cff31ba78cef7083c53e8b3b8693 readline52-005 8029
+SHA256 06001896514148a757ea6edbbd40c4fc4331dc653847244386c37b138b150f64 readline52-005 8029
+MD5 512188e2bf0837f7eca19dbf71f182ae readline52-006 2820
+RMD160 56649a55aeac4141992143fe2d11363ef6f45ee2 readline52-006 2820
+SHA256 dfef3e982c0adf8bb5a9b7d0468ec8f5f18138b325e28759437464de5be71013 readline52-006 2820
+MD5 ac17aca62eb6fb398c9f2fe9de540aff readline52-007 1523
+RMD160 31eaeca99f33b04816eb103c66915518da4b240a readline52-007 1523
+SHA256 775b028c7b761397ac6ae1bdfbac7e896dc3b9b3adc2f91312499180ca13bdd1 readline52-007 1523
